refactor(structure): add data and results folder

--- a/notebooks/Decision Trees.ipynb
+++ b/notebooks/Decision Trees.ipynb
@@ -55,7 +55,7 @@
     }
    ],
    "source": [
-    "diabetes = pd.read_csv('notebooks/data/diabetes_v3.csv')\n",
+    "diabetes = pd.read_csv('data/diabetes/diabetes_v3.csv')\n",
     "print(\"\\n\".join([*diabetes.columns]))"
    ]
   },
@@ -488,7 +488,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x12b5f7280>"
+       "<seaborn.axisgrid.FacetGrid at 0x12fac5280>"
       ]
      },
      "execution_count": 8,
@@ -527,7 +527,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x12b5f74f0>"
+       "<seaborn.axisgrid.FacetGrid at 0x12fac54f0>"
       ]
      },
      "execution_count": 9,
@@ -566,7 +566,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x12c18b580>"
+       "<seaborn.axisgrid.FacetGrid at 0x13064f580>"
       ]
      },
      "execution_count": 10,
@@ -1207,7 +1207,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e6a937f46ef445d86023acc8a70499f",
+       "model_id": "7a055fbc5c254e559d46b834279b7eac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1254,7 +1254,8 @@
     "plt.ylabel(\"Accuracy\")\n",
     "plt.xlabel(\"max leaf nodes\")\n",
     "plt.legend()\n",
-    "plt.savefig('decision_tree_acc_vs_max_leaf_nodes')"
+    "plt.savefig('results/outputs/decision_trees_acc')\n",
+    "plt.show()"
    ]
   },
   {
@@ -1380,6 +1381,15 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1396,6 +1406,7 @@
     "plt.ylabel('True Positive Rate')\n",
     "plt.title('Receiver operating characteristic')\n",
     "plt.legend(loc=\"lower right\")\n",
+    "plt.savefig('results/outputs/decision_trees_roc')\n",
     "plt.show()"
    ]
   },
