--- a/notebooks/KNN Regression.ipynb
+++ b/notebooks/KNN Regression.ipynb
@@ -21,7 +21,10 @@
     "from tqdm.notebook import tqdm  # progress meter\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "os.chdir(os.environ.get(\"PWD\"))  # change working directory to project directory\n",
+    "from src.helper.helper_sklearn_plotting import plot_feature_importances"
    ]
   },
   {
@@ -52,7 +55,7 @@
     }
    ],
    "source": [
-    "diabetes = pd.read_csv('data/diabetes_v3.csv')\n",
+    "diabetes = pd.read_csv('data/diabetes/diabetes_v3.csv')\n",
     "print(\"\\n\".join([*diabetes.columns]))"
    ]
   },
@@ -1101,7 +1104,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25fee19ac1aa46a08cb1d1d2d8249268",
+       "model_id": "f0a6d7da258f4f2fbe18d7d820148c61",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1135,19 +1138,20 @@
     "\n",
     "for n_neighbors in tqdm(neighbors_range):\n",
     "    # Build the model\n",
-    "    knn = KNeighborsClassifier(n_neighbors=n_neighbors)\n",
-    "    knn.fit(X_train.values, y_train)\n",
+    "    knn_classifier = KNeighborsClassifier(n_neighbors=n_neighbors)\n",
+    "    knn_classifier.fit(X_train.values, y_train)\n",
     "    # Record training set accuracy\n",
-    "    training_accuracy.append(knn.score(X_train.values, y_train))\n",
+    "    training_accuracy.append(knn_classifier.score(X_train.values, y_train))\n",
     "    # Record test set accuracy\n",
-    "    test_accuracy.append(knn.score(X_test.values, y_test))\n",
+    "    test_accuracy.append(knn_classifier.score(X_test.values, y_test))\n",
     "\n",
     "plt.plot(neighbors_range, training_accuracy, label=\"training accuracy\")\n",
     "plt.plot(neighbors_range, test_accuracy, label=\"test accuracy\")\n",
     "plt.ylabel(\"Accuracy\")\n",
     "plt.xlabel(\"k_neighbors\")\n",
     "plt.legend()\n",
-    "plt.savefig('knn_compare_model')"
+    "plt.savefig('results/outputs/knn_classifier_acc')\n",
+    "plt.show()"
    ]
   },
   {
@@ -1170,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "5c68be14",
    "metadata": {
     "scrolled": true
@@ -1190,18 +1194,18 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "# Build model\n",
     "print(f'Build model with {best_n_neighbors} nearest neighbors')\n",
-    "knn = KNeighborsClassifier(n_neighbors=best_n_neighbors)\n",
-    "knn.fit(X_train.values, y_train)\n",
+    "knn_classifier = KNeighborsClassifier(n_neighbors=best_n_neighbors)\n",
+    "knn_classifier.fit(X_train.values, y_train)\n",
     "\n",
     "# Compute accuracy\n",
     "accuracy = {}\n",
-    "accuracy[\"train\"] = knn.score(X_train.values, y_train)\n",
-    "accuracy[\"test\"] = knn.score(X_test.values, y_test)\n",
+    "accuracy[\"train\"] = knn_classifier.score(X_train.values, y_train)\n",
+    "accuracy[\"test\"] = knn_classifier.score(X_test.values, y_test)\n",
     "print(f'Train accuracy: {accuracy[\"train\"]:.4f}')\n",
     "print(f'Test accuracy: {accuracy[\"test\"]:.4f}')\n",
     "\n",
     "# Predict on test data\n",
-    "pred_diabetes_prob = knn.predict_proba(X_test.values)[:,1]\n",
+    "pred_diabetes_prob = knn_classifier.predict_proba(X_test.values)[:,1]\n",
     "y_pred = pred_diabetes_prob > 0.5"
    ]
   },
@@ -1215,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "f92a94ef",
    "metadata": {},
    "outputs": [
@@ -1242,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "54a54f18",
    "metadata": {},
    "outputs": [
@@ -1256,6 +1260,15 @@
      "metadata": {
       "needs_background": "light"
      },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -1273,6 +1286,7 @@
     "plt.ylabel('True Positive Rate')\n",
     "plt.title('Receiver operating characteristic')\n",
     "plt.legend(loc=\"lower right\")\n",
+    "plt.savefig('results/outputs/knn_classifier_roc')\n",
     "plt.show()"
    ]
   },
