--- a/notebooks/Logistig Regression.ipynb
+++ b/notebooks/Logistig Regression.ipynb
@@ -21,7 +21,9 @@
     "from tqdm.notebook import tqdm  # progress meter\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n"
+    "%matplotlib inline\n",
+    "\n",
+    "os.chdir(os.environ.get(\"PWD\"))  # change working directory to project directory"
    ]
   },
   {
@@ -52,7 +54,7 @@
     }
    ],
    "source": [
-    "diabetes = pd.read_csv('data/diabetes_v3.csv')\n",
+    "diabetes = pd.read_csv('data/diabetes/diabetes_v3.csv')\n",
     "print(\"\\n\".join([*diabetes.columns]))"
    ]
   },
@@ -485,7 +487,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x12f814400>"
+       "<seaborn.axisgrid.FacetGrid at 0x1272b90d0>"
       ]
      },
      "execution_count": 8,
@@ -524,7 +526,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x12f91afa0>"
+       "<seaborn.axisgrid.FacetGrid at 0x127334d00>"
       ]
      },
      "execution_count": 9,
@@ -563,7 +565,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x10ea2db80>"
+       "<seaborn.axisgrid.FacetGrid at 0x1273a5520>"
       ]
      },
      "execution_count": 10,
@@ -1192,8 +1194,8 @@
       "Dep. Variable:               diabetes   No. Observations:                66484\n",
       "Model:                          Logit   Df Residuals:                    66473\n",
       "Method:                           MLE   Df Model:                           10\n",
-      "Date:                Tue, 19 Oct 2021   Pseudo R-squ.:                  0.8076\n",
-      "Time:                        13:53:43   Log-Likelihood:                -7056.0\n",
+      "Date:                Thu, 21 Oct 2021   Pseudo R-squ.:                  0.8076\n",
+      "Time:                        11:31:54   Log-Likelihood:                -7056.0\n",
       "converged:                       True   LL-Null:                       -36675.\n",
       "Covariance Type:            nonrobust   LLR p-value:                     0.000\n",
       "=================================================================================\n",
@@ -1375,6 +1377,15 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1391,6 +1402,7 @@
     "plt.ylabel('True Positive Rate')\n",
     "plt.title('Receiver operating characteristic')\n",
     "plt.legend(loc=\"lower right\")\n",
+    "plt.savefig('results/outputs/logistic_regression_roc')\n",
     "plt.show()"
    ]
   },
