--- a/notebooks/Random Forest.ipynb
+++ b/notebooks/Random Forest.ipynb
@@ -59,7 +59,7 @@
     }
    ],
    "source": [
-    "diabetes = pd.read_csv('notebooks/data/diabetes_v3.csv')\n",
+    "diabetes = pd.read_csv('data/diabetes/diabetes_v3.csv')\n",
     "print(\"\\n\".join([*diabetes.columns]))"
    ]
   },
@@ -492,7 +492,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x12bc70790>"
+       "<seaborn.axisgrid.FacetGrid at 0x129c41790>"
       ]
      },
      "execution_count": 8,
@@ -531,7 +531,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x11ec84e20>"
+       "<seaborn.axisgrid.FacetGrid at 0x129d546a0>"
       ]
      },
      "execution_count": 9,
@@ -570,7 +570,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x12e852520>"
+       "<seaborn.axisgrid.FacetGrid at 0x11c49ca60>"
       ]
      },
      "execution_count": 10,
@@ -1211,7 +1211,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2408f04e75c4e0d876e19cb7998a9f6",
+       "model_id": "64aeed3d87434323b2a527fa8616a5e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1257,7 +1257,8 @@
     "plt.ylabel(\"Accuracy\")\n",
     "plt.xlabel(\"Number of estimators\")\n",
     "plt.legend()\n",
-    "plt.savefig('random_forest_acc_vs_estimators')"
+    "plt.savefig('results/outputs/random_forest_acc')\n",
+    "plt.show()"
    ]
   },
   {
@@ -1272,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "5c68be14",
    "metadata": {
     "scrolled": true
@@ -1308,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "ccbece52",
    "metadata": {},
    "outputs": [
@@ -1339,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "f92a94ef",
    "metadata": {
     "scrolled": true
@@ -1368,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "54a54f18",
    "metadata": {},
    "outputs": [
@@ -1382,6 +1383,15 @@
      "metadata": {
       "needs_background": "light"
      },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -1399,6 +1409,7 @@
     "plt.ylabel('True Positive Rate')\n",
     "plt.title('Receiver operating characteristic')\n",
     "plt.legend(loc=\"lower right\")\n",
+    "plt.savefig('results/outputs/random_forest_roc')\n",
     "plt.show()"
    ]
   },
